Update GameLog.java